# EVM_2_year

lab1/: f.txt  optimize_time.sh  r.txt  results.txt  results1.txt  time.c  timef  times.c  timesf
lab6/: main  main.cpp
lab7/: CMakeLists.txt  inversion_test.cpp  main  main_vec.cpp  matrix.h
lab8/: main  main.cpp  main2.cpp  out_ran.txt  out_rev.txt  out_s.txt  plot0.gp
lab9/: l1.txt  l2.txt  main  main.cpp  plot.gp
